# bitnet-rs-dev

./: .gitignore  .gitmodules  Cargo.toml  README.md
bitnet/: Cargo.toml
bitnet-llm/: Cargo.toml
bitnet-llm-sys/: Cargo.toml  build.rs
bitnet-llm/examples/: chat.rs  inference_standard.rs  inference_streaming.rs
bitnet-llm/src/: error.rs  lib.rs  model.rs  session.rs
bitnet-sys/: Cargo.toml  build.rs
bitnet-sys/src/: lib.rs
bitnet/examples/: chat.rs  inference.rs  inference_standard.rs  inference_streaming.rs
bitnet/src/: lib.rs  model.rs  params.rs  session.rs
