[package]
name = "bitnet-llm"
version = "1.0.2"
edition = "2021"
description = "Safe Rust bindings to Microsoft's BitNet b1.58 inference engine."
license = "MIT"
repository = "https://github.com/CiprianFlorin-Ifrim/bitnet-llm-rs-dev"
keywords = ["bitnet", "llm", "inference", "machine-learning", "ai"]
categories = ["science", "api-bindings"]
readme = "../README.md"

[dependencies]
bitnet-llm-sys = { path = "../bitnet-llm-sys", version = "1.0.1" }